# openclaw-runtime-governor

./: .dockerignore  .gitignore  DEPLOY.md  DEVELOPER.md  DISCLOSURES.md  Dockerfile  GovernorComplete.jsx  Governordashboard-demo.jsx  LICENSE  PUBLISHING.md  README.md  demo_agent.py  fly.toml  governor_agent.py
agent-fingerprinting/: FINGERPRINTING_README.md
openclaw-skills/governed-tools/: LICENSE  README.md  governor_client.py  pyproject.toml  skill.toml
openclaw-skills/governed-tools/java-client/: README.md  pom.xml
openclaw-skills/governed-tools/java-client/src/main/java/dev/openclaw/governor/: GovernorBlockedError.java  GovernorClient.java  GovernorDecision.java  GovernorException.java  SimpleJson.java
openclaw-skills/governed-tools/js-client/: .gitignore  README.md  openclaw-governor-client-0.3.0.tgz  package-lock.json  package.json  sovereign-ai-governor-0.3.0.tgz  sovereignailab-governor-client-0.3.0.tgz  tsconfig.esm.json  tsconfig.json
openclaw-skills/governed-tools/js-client/src/: index.ts
openclaw-skills/governed-tools/js-client/tests/: client.test.mjs
openclaw-skills/governed-tools/openclaw-skills/governed-tools/js-client/: README.md  package-lock.json  package.json  tsconfig.json
openclaw-skills/governed-tools/openclaw-skills/governed-tools/js-client/examples/: proxy-server.js
openclaw-skills/governed-tools/openclaw-skills/governed-tools/js-client/src/: index.ts
openclaw-skills/governed-tools/openclaw-skills/governed-tools/js-client/tests/: test_client.js  test_client_headers.js
openclaw-skills/governed-tools/python-proxy/: README.md  proxy_server.py  requirements.txt
openclaw-skills/governed-tools/python-proxy/tests/: test_proxy.py
(+199 files in other folders)
