[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openclaw-governor-client"
version = "0.3.0"
description = "Python client for the OpenClaw Governor – runtime AI-agent governance service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Sovereign AI Lab" },
]
keywords = ["openclaw", "governor", "ai-safety", "agent-governance", "runtime-policy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/othnielObasi/openclaw-runtime-governor"
Repository = "https://github.com/othnielObasi/openclaw-runtime-governor"
Documentation = "https://github.com/othnielObasi/openclaw-runtime-governor#readme"
Issues = "https://github.com/othnielObasi/openclaw-runtime-governor/issues"

[tool.hatch.build.targets.sdist]
include = [
    "governor_client.py",
    "README.md",
    "LICENSE",
    "py.typed",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "governor_client.py",
    "py.typed",
]
